# zscaler-mcp-server

./: .dockerignore  .env.dev.example  .env.example  .gitignore  .markdownlint.json  .markdownlintignore  .mcp.json  .mcpbignore  .pylintrc  .readthedocs.yaml  .releaserc.json  CHANGELOG.md  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  codecov.yml  gemini-extension.json  init_request.json  junit.xml  main.py  manifest.json  mcp.json  mcp_server_blog.md  pyproject.toml  requirements.txt  run_mcp_server.sh  server.json  tool-metadata.json  zscaler-mcp-server.mcpb
.claude-plugin/: marketplace.json  plugin.json
.cursor/: mcp.json
.cursor-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md  set-version.sh
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: docker-build-push.yml  docker-build-test.yml  docs-autogen.yml  docs-site.yml  markdown-lint.yml  mcpb-build-test.yml  mcpb-build.yml  python-lint.yml  python-test.yml  release.yml  tests.yml
commands/: app-health.md  audit-software.md  audit-ssl.md  check-access.md  compare-locations.md  create-access-rule.md  create-forwarding-rule.md  create-server-group.md  create-timeout-rule.md  diagnose-deeptrace.md  investigate-alerts.md  investigate-incident.md  investigate-sandbox.md  investigate-url.md  onboard-app.md  onboard-location.md  review-attack-surface.md  troubleshoot-connector.md  troubleshoot-experience.md  troubleshoot-user.md
docs/: CONTRIBUTING.md
docs-site/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/docs/: changelog.md  intro.md
docs-site/scripts/: generate_skills_index.py  sync_integrations_to_docs.py
docs/deployment/: amazon_bedrock_agentcore.md  authentication-and-deployment.md  azure-ai-foundry.md  entra-id-oidcproxy.md  gcp_secrets_manager_integration.md  google_cloud.md  secrets_manager_integration.md  strands-agentcore-client.md
docs/guides/: TROUBLESHOOTING.md  release-notes.md  support.md  supported-tools.md  toolsets.md
docsrc/: Makefile  conf.py  getting-started.rst  index.rst  requirements.in  requirements.txt
docsrc/_build/: .buildinfo  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docsrc/_build_clean/: .buildinfo  genindex.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js
docsrc/_static/: custom.css
docsrc/api/: index.rst  services.rst  tools.rst  utils.rst
docsrc/deployment/: index.rst
docsrc/development/: building-from-source.rst  contributing.rst  index.rst
docsrc/guides/: amazon-bedrock-agentcore.rst  aws-harness.rst  azure-ai-foundry.rst  azure-deployment.rst  claude-desktop-extension.rst  configuration.rst  deployment-azure.rst  deployment-gcp.rst  deployment-local.rst  examples.rst  gcp-adk-agent.rst  gcp-cloud-run.rst  gcp-compute-engine-vm.rst  gcp-gke.rst  index.rst  release-notes.rst  secrets-manager.rst  strands-agentcore.rst  support.rst  troubleshooting.rst
docsrc/help-and-support/: index.rst
docsrc/integrations/: index.rst
docsrc/security/: lifecycle.rst  write-operations.rst
docsrc/skills/: index.rst
docsrc/tools/: index.rst
examples/: basic_usage.py  sse_usage.py  streamable_http_usage.py  use_legacy_env_example.py
integrations/: README.md
integrations/adk/: README.md  adk_agent_operations.py  adk_agent_operations.sh
integrations/anthropic/: manifest.json
integrations/aws/: .env.bak  .gitignore  README.md  aws_mcp_operations.py  requirements.txt  strands_agent_chat.py
integrations/azure/: .aks-manifest.yaml  README.md  azure_mcp_operations.py  env.properties  foundry_agent.py
integrations/claude-code-plugin/: README.md
integrations/cursor-plugin/: README.md
integrations/gemini-extension/: README.md
integrations/github/: README.md
integrations/google/: README.md
integrations/helm-chart/: README.md  helm_mcp_operations.py
integrations/kiro/: POWER.md  README.md  mcp.json
rules/: cross-service-overlap.mdc  write-operation-safety.mdc  zdx-read-only.mdc  zia-activation-required.mdc  zms-graphql-conventions.mdc  zpa-dependency-chain.mdc  zscaler-tool-conventions.mdc
scripts/: README.md  build-cowork-plugin.sh  build_mcpb.py  deploy-gcp.py  setup-mcp-server.py  validate-template.mjs
skills/zdx/: README.md
src/: registry.py
src/sdk/: zscaler_client.py
src/utils/: utils.py
src/zscaler_mcp/: __init__.py  main.py  registry.py  server_main.py
tests/: README.md  __init__.py  conftest.py  test_auth.py  test_cache_metadata.py  test_client.py  test_docgen.py  test_elicitation.py  test_elicitation_native.py  test_entitlements.py  test_jmespath_utils.py  test_lifecycle.py  test_logging.py  test_mcpb.py  test_registry.py  test_sanitize.py  test_security.py  test_server.py  test_server_coverage.py  test_streamable_http_transport.py  test_tool_helpers.py  test_tool_helpers_audit.py  test_toolsets.py  test_trace_context.py  test_transport_hardening.py  test_use_legacy_env.py  test_user_agent.py  test_v1_v2_converter.py  test_v2_to_sdk_converter.py
tests/azure/: test_azure_mcp_operations.py  test_foundry_agent.py
tests/e2e/: IMPLEMENTATION.md  README.md  __init__.py  run_e2e_tests.py  test_zcc.py  test_zdx.py  test_zia.py  test_zidentity.py  test_zpa.py
tests/easm/: test_easm_tools.py
tests/zcc/: test_zcc_tools.py
tests/zdx/: test_zdx_tools.py
tests/zia/: test_rule_labels.py  test_time_intervals.py  test_zia_tools.py
tests/zid/: test_zid_tools.py
tests/zins/: __init__.py  test_web_traffic_tools.py  test_zins_tools.py
tests/zinsights/: test_web_traffic_tools.py
tests/zms/: test_zms_tools.py
tests/zpa/: test_zpa_tools.py
tests/ztw/: test_ztw_tools.py
zscaler_mcp/: __init__.py  auth.py  client.py  lifecycle.py  main.py  server.py  services.py  web_server.py
zscaler_mcp/cloud/: gcp_secrets.py
zscaler_mcp/common/: __init__.py  cache_metadata.py  docgen.py  elicitation.py  elicitation_native.py  entitlements.py  jmespath_utils.py  logging.py  mcpb.py  sanitize.py  tool_helpers.py  toolsets.py  (+3 more)
(+809 files in other folders)
