[project]
name = "zscaler-mcp"
version = "0.1.0"
description = "Official Zscaler MCP Server"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Zscaler, Inc.", email = "devrel@zscaler.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "zscaler-sdk-python",
  "mcp[cli]>=1.9.1",
  "fastmcp>=2.5.1",
  "python-dotenv",
  "click",
  "uvicorn"
]

[project.scripts]
zscaler-mcp = "zscaler_mcp.server:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "mypy",
  "ipython",
  "ruff",
  "pytest-asyncio>=0.21.0",
  "langchain-openai>=0.3.28",
  "mcp-use[search]>=1.3.7"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:websockets.*:",
    "ignore::DeprecationWarning:uvicorn.protocols.websockets.*:",
    "ignore::pydantic.PydanticDeprecatedSince20:langchain_core.*:"
]

[tool.setuptools.packages.find]
include = ["zscaler_mcp*"]
exclude = ["notes*", "local_dev*", "tests*"]
