[project]
name = "zscaler-mcp"
version = "0.3.2"
description = "Official Zscaler Integrations MCP Server"
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = "MIT"
authors = [
  { name = "Zscaler, Inc.", email = "devrel@zscaler.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "zscaler-sdk-python",
  "mcp[cli]>=1.9.1",
  "fastmcp>=2.5.1",
  "python-dotenv",
  "click",
  "uvicorn",
  "fastapi",
  "pycountry",
  "authlib>=1.6.4",
  "cryptography>=46.0.1",
  "huggingface-hub>=0.35.0",
  "jiter>=0.11.0",
  "langsmith>=0.4.28",
  "openai>=1.107.3",
  "posthog>=6.7.5",
  "pydantic>=2.11.9",
  "starlette>=0.48.0",
  "zstandard>=0.25.0",
  "package-name>=0.1",
]

[project.scripts]
zscaler-mcp = "zscaler_mcp.server:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "mypy",
  "ipython",
  "ruff",
  "pycountry",
  "pytest-asyncio>=0.21.0",
  "langchain-openai>=0.3.28",
  "mcp-use[search]>=1.3.7"
]
docs = [
  "sphinx>=7.3.5",
  "furo>=2024.1.29",
  "myst-parser>=2.0.0",
  "sphinx-rtd-theme>=2.0.0",
  "sphinx-autodoc-typehints>=1.24.0",
  "sphinx-copybutton>=0.5.0",
  "sphinx-design>=0.5.0"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:websockets.*:",
    "ignore::DeprecationWarning:uvicorn.protocols.websockets.*:",
    "ignore::pydantic.PydanticDeprecatedSince20:langchain_core.*:"
]

[tool.setuptools.packages.find]
include = ["zscaler_mcp*"]
exclude = ["notes*", "local_dev*", "tests*"]
